--- a/Health_monitor_py.ipynb
+++ b/Health_monitor_py.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOyr5fxYGMWfDN8BiCP+BPz",
+      "authorship_tag": "ABX9TyPbrFik9hGPJm6AUI0URXvI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
         },
         "id": "DtCEbvOBItMG",
-        "outputId": "97a5df45-37a5-490d-a61c-3369d1430121"
+        "outputId": "f98b4ea4-1998-4a9d-9f92-098446f9b663"
       },
       "outputs": [
         {
@@ -46,9 +46,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-97490bd7-ff40-4fb8-ac44-0311d1184cf6\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-1405ce62-5c7f-4539-bd6c-464c39ffd730\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-97490bd7-ff40-4fb8-ac44-0311d1184cf6\">\n",
+              "     <output id=\"result-1405ce62-5c7f-4539-bd6c-464c39ffd730\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -236,7 +236,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving UCI HAR Dataset.names to UCI HAR Dataset (2).names\n"
+            "Saving UCI HAR Dataset.names to UCI HAR Dataset.names\n"
           ]
         }
       ],
@@ -248,7 +248,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# ✅ Automatically download and extract the UCI HAR dataset\n",
         "import requests, zipfile, io, pandas as pd\n",
         "\n",
         "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00240/UCI%20HAR%20Dataset.zip\"\n",
@@ -263,9 +262,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hZSe6WaEMOE0",
-        "outputId": "a9224389-2e96-44c6-c5b0-cf1618e30643"
+        "outputId": "cdf96084-2cde-4def-b9dc-9fea32250ca6"
       },
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,13 +278,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load training and testing data\n",
         "X_train = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/train/X_train.txt\", delim_whitespace=True, header=None)\n",
         "y_train = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/train/y_train.txt\", header=None)\n",
         "X_test = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/test/X_test.txt\", delim_whitespace=True, header=None)\n",
         "y_test = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/test/y_test.txt\", header=None)\n",
         "\n",
-        "# Combine them\n",
         "X = pd.concat([X_train, X_test])\n",
         "y = pd.concat([y_train, y_test])\n",
         "\n",
@@ -298,9 +295,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "V-dSNLmFMTHs",
-        "outputId": "407ce047-364a-46d8-8c5a-fe44fe0af419"
+        "outputId": "5c577626-a03c-4cf4-a65b-33d5f9f8ac7c"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,21 +328,16 @@
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "\n",
-        "# Scale the features\n",
         "scaler = StandardScaler()\n",
         "X_scaled = scaler.fit_transform(X)\n",
         "\n",
-        "# Encode labels\n",
-        "y_encoded = y[0].values - 1  # Activities are labeled 1–6\n",
+        "y_encoded = y[0].values - 1\n",
         "\n",
-        "# Split into train/test sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42)\n",
         "\n",
-        "# Convert to categorical for softmax\n",
         "y_train_cat = tf.keras.utils.to_categorical(y_train)\n",
         "y_test_cat = tf.keras.utils.to_categorical(y_test)\n",
         "\n",
-        "# Build model\n",
         "model = tf.keras.models.Sequential([\n",
         "    tf.keras.layers.Input(shape=(X_train.shape[1],)),\n",
         "    tf.keras.layers.Dense(64, activation='relu'),\n",
@@ -355,10 +347,8 @@
         "\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "# Train\n",
         "history = model.fit(X_train, y_train_cat, epochs=20, batch_size=64, validation_split=0.2)\n",
         "\n",
-        "# Evaluate\n",
         "loss, acc = model.evaluate(X_test, y_test_cat)\n",
         "print(f\"\\n✅ Test Accuracy: {acc*100:.2f}%\")\n"
       ],
@@ -367,57 +357,57 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WYePl5H6LVke",
-        "outputId": "de499680-0140-4cff-d306-fbf8e0c8bdcf"
+        "outputId": "67bb89e4-7375-425b-e9f0-be4e8de62da9"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.6852 - loss: 0.7686 - val_accuracy: 0.9448 - val_loss: 0.1525\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - accuracy: 0.7242 - loss: 0.7134 - val_accuracy: 0.9417 - val_loss: 0.1680\n",
             "Epoch 2/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9574 - loss: 0.1281 - val_accuracy: 0.9575 - val_loss: 0.1078\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9575 - loss: 0.1219 - val_accuracy: 0.9581 - val_loss: 0.1170\n",
             "Epoch 3/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9710 - loss: 0.0823 - val_accuracy: 0.9587 - val_loss: 0.1044\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9762 - loss: 0.0832 - val_accuracy: 0.9508 - val_loss: 0.1209\n",
             "Epoch 4/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9773 - loss: 0.0672 - val_accuracy: 0.9684 - val_loss: 0.0822\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.9756 - loss: 0.0625 - val_accuracy: 0.9666 - val_loss: 0.0916\n",
             "Epoch 5/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9828 - loss: 0.0468 - val_accuracy: 0.9666 - val_loss: 0.0823\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9828 - loss: 0.0504 - val_accuracy: 0.9703 - val_loss: 0.0783\n",
             "Epoch 6/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9764 - loss: 0.0583 - val_accuracy: 0.9666 - val_loss: 0.0817\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9842 - loss: 0.0458 - val_accuracy: 0.9697 - val_loss: 0.0754\n",
             "Epoch 7/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9827 - loss: 0.0488 - val_accuracy: 0.9618 - val_loss: 0.0856\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9875 - loss: 0.0367 - val_accuracy: 0.9709 - val_loss: 0.0720\n",
             "Epoch 8/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9857 - loss: 0.0351 - val_accuracy: 0.9642 - val_loss: 0.0956\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9829 - loss: 0.0481 - val_accuracy: 0.9636 - val_loss: 0.0874\n",
             "Epoch 9/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9888 - loss: 0.0303 - val_accuracy: 0.9709 - val_loss: 0.0800\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9870 - loss: 0.0347 - val_accuracy: 0.9733 - val_loss: 0.0754\n",
             "Epoch 10/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9905 - loss: 0.0270 - val_accuracy: 0.9745 - val_loss: 0.0687\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9864 - loss: 0.0354 - val_accuracy: 0.9727 - val_loss: 0.0779\n",
             "Epoch 11/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9903 - loss: 0.0236 - val_accuracy: 0.9727 - val_loss: 0.0683\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.9914 - loss: 0.0245 - val_accuracy: 0.9745 - val_loss: 0.0710\n",
             "Epoch 12/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9948 - loss: 0.0170 - val_accuracy: 0.9636 - val_loss: 0.0905\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9940 - loss: 0.0220 - val_accuracy: 0.9703 - val_loss: 0.0826\n",
             "Epoch 13/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9908 - loss: 0.0243 - val_accuracy: 0.9660 - val_loss: 0.0837\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9946 - loss: 0.0172 - val_accuracy: 0.9715 - val_loss: 0.0804\n",
             "Epoch 14/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9952 - loss: 0.0165 - val_accuracy: 0.9757 - val_loss: 0.0648\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9869 - loss: 0.0300 - val_accuracy: 0.9430 - val_loss: 0.2176\n",
             "Epoch 15/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9946 - loss: 0.0164 - val_accuracy: 0.9788 - val_loss: 0.0595\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9819 - loss: 0.0731 - val_accuracy: 0.9745 - val_loss: 0.0720\n",
             "Epoch 16/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9970 - loss: 0.0103 - val_accuracy: 0.9757 - val_loss: 0.0719\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9959 - loss: 0.0153 - val_accuracy: 0.9751 - val_loss: 0.0666\n",
             "Epoch 17/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9982 - loss: 0.0107 - val_accuracy: 0.9788 - val_loss: 0.0610\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9960 - loss: 0.0120 - val_accuracy: 0.9788 - val_loss: 0.0610\n",
             "Epoch 18/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9994 - loss: 0.0046 - val_accuracy: 0.9757 - val_loss: 0.0661\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9982 - loss: 0.0074 - val_accuracy: 0.9739 - val_loss: 0.0839\n",
             "Epoch 19/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9989 - loss: 0.0063 - val_accuracy: 0.9775 - val_loss: 0.0614\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9965 - loss: 0.0120 - val_accuracy: 0.9739 - val_loss: 0.0788\n",
             "Epoch 20/20\n",
-            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9984 - loss: 0.0058 - val_accuracy: 0.9727 - val_loss: 0.0906\n",
-            "\u001b[1m65/65\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.9805 - loss: 0.0729\n",
+            "\u001b[1m103/103\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step - accuracy: 0.9973 - loss: 0.0086 - val_accuracy: 0.9769 - val_loss: 0.0649\n",
+            "\u001b[1m65/65\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.9855 - loss: 0.0413\n",
             "\n",
-            "✅ Test Accuracy: 98.06%\n"
+            "✅ Test Accuracy: 98.40%\n"
           ]
         }
       ]
@@ -425,9 +415,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# -----------------------------------\n",
-        "# SMART HEALTH MONITOR - Using Softmax Classifier (ANN)\n",
-        "# -----------------------------------\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -437,67 +424,56 @@
         "from sklearn.metrics import classification_report\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# 1️⃣ Download & extract the UCI HAR dataset\n",
         "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00240/UCI%20HAR%20Dataset.zip\"\n",
         "r = requests.get(url)\n",
         "z = zipfile.ZipFile(io.BytesIO(r.content))\n",
         "z.extractall(\"UCI_HAR_Dataset\")\n",
         "print(\"✅ UCI HAR Dataset downloaded and extracted successfully\")\n",
         "\n",
-        "# 2️⃣ Load training and testing data\n",
         "X_train = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/train/X_train.txt\", delim_whitespace=True, header=None)\n",
         "y_train = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/train/y_train.txt\", header=None)\n",
         "X_test = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/test/X_test.txt\", delim_whitespace=True, header=None)\n",
         "y_test = pd.read_csv(\"UCI_HAR_Dataset/UCI HAR Dataset/test/y_test.txt\", header=None)\n",
         "\n",
-        "# Combine data\n",
         "X = pd.concat([X_train, X_test])\n",
         "y = pd.concat([y_train, y_test])\n",
         "print(\"Data Loaded: \", X.shape, \" samples\")\n",
         "\n",
-        "# 3️⃣ Normalize features\n",
         "scaler = StandardScaler()\n",
         "X_scaled = scaler.fit_transform(X)\n",
         "\n",
-        "# Convert labels (1–6) to 0–5\n",
         "y = y[0].values - 1\n",
         "\n",
-        "# Split again (to show training vs validation)\n",
         "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "# Convert labels to categorical\n",
+        "\n",
         "y_train_cat = tf.keras.utils.to_categorical(y_train)\n",
         "y_val_cat = tf.keras.utils.to_categorical(y_val)\n",
         "\n",
-        "# 4️⃣ Build ANN model (Softmax output)\n",
         "model = tf.keras.models.Sequential([\n",
         "    tf.keras.layers.Input(shape=(X_train.shape[1],)),\n",
         "    tf.keras.layers.Dense(128, activation='relu'),\n",
         "    tf.keras.layers.Dropout(0.3),\n",
         "    tf.keras.layers.Dense(64, activation='relu'),\n",
-        "    tf.keras.layers.Dense(6, activation='softmax')  # 6 activities\n",
+        "    tf.keras.layers.Dense(6, activation='softmax')\n",
         "])\n",
         "\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "# 5️⃣ Train model\n",
         "history = model.fit(X_train, y_train_cat, epochs=25, batch_size=64, validation_data=(X_val, y_val_cat), verbose=1)\n",
         "\n",
-        "# 6️⃣ Evaluate on validation/test data\n",
         "loss, acc = model.evaluate(X_val, y_val_cat, verbose=0)\n",
         "print(f\"\\n✅ Final Test Accuracy: {acc*100:.2f}%\")\n",
         "\n",
-        "# 7️⃣ Classification Report\n",
         "y_pred = model.predict(X_val)\n",
         "y_pred_classes = np.argmax(y_pred, axis=1)\n",
         "print(\"\\n📊 Classification Report:\")\n",
         "print(classification_report(y_val, y_pred_classes,\n",
         "      target_names=['Walking', 'Walking_Upstairs', 'Walking_Downstairs', 'Sitting', 'Standing', 'Lying']))\n",
         "\n",
-        "# 8️⃣ Accuracy & Loss Graphs\n",
         "plt.figure(figsize=(12, 5))\n",
         "\n",
-        "# Accuracy Plot\n",
+        "\n",
         "plt.subplot(1, 2, 1)\n",
         "plt.plot(history.history['accuracy'], label='Train Accuracy', color='green')\n",
         "plt.plot(history.history['val_accuracy'], label='Validation Accuracy', color='blue')\n",
@@ -507,7 +483,6 @@
         "plt.legend()\n",
         "plt.grid(True)\n",
         "\n",
-        "# Loss Plot\n",
         "plt.subplot(1, 2, 2)\n",
         "plt.plot(history.history['loss'], label='Train Loss', color='red')\n",
         "plt.plot(history.history['val_loss'], label='Validation Loss', color='orange')\n",
@@ -527,7 +502,7 @@
         "id": "KUTm2F78NkOG",
         "outputId": "5a26e5d8-eccd-4195-ead2-51cc09be1b20"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
